# torchdental_takehome

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
infrastructure/docker-compose/: env.db.dev  env.dev
torchdental_takehome/: manage.py
torchdental_takehome/mta_status_indexer/: apps.py  models.py  views.py
torchdental_takehome/mta_status_indexer/management/commands/: query_mta.py
torchdental_takehome/mta_status_indexer/migrations/: 0001_initial.py  0002_auto_20201123_1358.py
torchdental_takehome/torchdental_takehome/: asgi.py  settings.py  urls.py  wsgi.py
