[tool.poetry]
name = "torchdental_takehome"
version = "0.1.0"
description = ""
authors = ["Harsha Goli <harshagoli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
psycopg2-binary = "^2.8.5"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
